OptimalSolver comments